appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - privacy

---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

# Load Site
- assertVisible:
    id: "searchEntry"
- tapOn: 
    id: "searchEntry"
- inputText: "https://setcookie.net"
- pressKey: Enter
- runFlow:
    file: ../shared/hide_daxdialogs.yaml

# Set a cookie
- assertVisible: "Cookie Test"
- tapOn: "Cookie name"
- inputText: "TestName"
- tapOn: "Cookie value"
- inputText: "TestValue"
- tapOn: "Done"
- scrollUntilVisible:
    element:
      text: "Submit"
- tapOn: "Submit"

# Fireproof the site
- runFlow:
    file: ../shared/open_browsing_menu_item.yaml
    env:
      ITEM: "Fireproof This Site"
- tapOn: "Fireproof"
- assertVisible: "setcookie.net is now Fireproof"

# Fire Button - twice, just to be sure
- runFlow:
    file: ../shared/use_firebutton.yaml
- assertVisible: "Cancel"
- tapOn: "Cancel"
- assertVisible:
    id: "searchEntry"
- runFlow:
    file: ../shared/use_firebutton.yaml

# Validate Cookie was retained
- tapOn: 
    id: "searchEntry"
- inputText: "https://setcookie.net"
- pressKey: Enter
- assertVisible: "TestName = TestValue"

# Remove fireproofing
- runFlow:
    file: ../shared/open_browsing_menu_item.yaml
    env:
      ITEM: "Remove Fireproofing"

# Fire Button
- runFlow:
    file: ../shared/use_firebutton.yaml

# Validate Cookie was removed
- tapOn: 
    id: "searchEntry"
- inputText: "https://setcookie.net"
- pressKey: Enter
- assertVisible: "Cookie Test"
- assertVisible: "Received no cookies."
