appId: com.duckduckgo.mobile.ios
---

- tapOn: "Browsing menu"
- scrollUntilVisible:
    element: ${ITEM}
    centerElement: true
- tapOn: ${ITEM}
